--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 /*Colours*/
 
-.bg-color-name-title{
+.bg-color-name-title {
     background-color: #676767;
 }
 
@@ -14,6 +14,10 @@
     background-color: #f4f4f4;
 }
 
+.bg-color-skills {
+    background-color: #ffffff;
+}
+
 .bg-color-work-history {
     background-color: #9b59b6;
 }
@@ -21,6 +25,15 @@
 .bg-color-contact {
     background-color: #ffffff;
 }
+
+.bg-color-conferences {
+    background-color: #f4f4f4;
+}
+
+.bg-color-groups {
+    background-color: #ffffff;
+}
+
 .ui-menu-color-home {
     background-color: #e67e22;
 }
@@ -34,11 +47,35 @@
 }
 
 .ui-menu-color-download {
-    background-color: #525252;
+    background-color: #d9a81d;
 }
 
-/* special paddings/margins/text*/
-h1,h2,h3,h4 {
+
+.ui-menu-color-github {
+    background-color: #1c4a6c;
+}
+
+.ui-menu-color-interests {
+    background-color: #e74c3c;
+}
+
+
+
+
+body {
+    font-family: Roboto, sans-serif;
+    font-weight: 300;
+    background-color: #525252;
+    color: #555555;
+}
+
+
+/*--------------------------------------------Special Paddings/Margins/Text*/
+
+h1,
+h2,
+h3,
+h4 {
     margin: 0;
 }
 
@@ -56,14 +93,9 @@ h1,h2,h3,h4 {
     display: inline-block;
 }
 
+
 .row-table {
     display: table;
-}
-
-.section-column{
-    display: table-cell;
-    padding: 0 30px 30px;
-    float: none;
 }
 
 .history-heading,
@@ -74,7 +106,9 @@ h1,h2,h3,h4 {
     margin-bottom: 40px;
 }
 
-/*heading*/
+
+/*--------------------------------------------Heading*/
+
 header {
     margin: 0;
 }
@@ -84,7 +118,7 @@ header {
 }
 
 .logo {
-    background: url(../images/profile-image.jpg);
+    background: url("../images/profile-image.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -94,7 +128,7 @@ header {
     -webkit-transition: all .5s ease-in-out;
 }
 
-.name{
+.name {
     font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
@@ -111,20 +145,11 @@ header {
     color: #ffffff;
 }
 
-.list-inline-item:not(:last-child) {
-    margin: 0;
-}
-
-.menucontainer {
-    font-size: 0;
-}
-
 #nav {
     margin: 0;
 }
 
 #nav li {
-    font-size: 14px;
     padding: 0;
 }
 
@@ -140,6 +165,7 @@ header {
     color: #ffffff;
     height: 120px;
 }
+
 
 .menuitem a i {
     padding-top: 22px;
@@ -159,13 +185,17 @@ header {
     letter-spacing: 2px;
 }
 
-/* hover.css*/
+
+/*--------------------------------------------Hover.css*/
+
 .hvr-sweep-to-bottom:before {
-    background-color: rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.2);
     height: 120px;
 }
 
-/*footer*/
+
+/*--------------------------------------------Footer*/
+
 footer {
     background-color: #525252;
     color: #fafafa;
@@ -173,19 +203,19 @@ footer {
     margin: 0;
 }
 
-.cv-pdf i {
-    font-size: 18px;
+footer .cv-pdf i {
     color: #fafafa;
     text-align: center;
+    font-size: 18px;
     padding-left: 5px;
+}
+
+footer .cv-pdf i:hover {
+    color: #e84610;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-}
-
-.cv-pdf i:hover {
-    color: #b4380f;
 }
 
 .social-links {
@@ -197,7 +227,7 @@ footer {
     height: 32px;
     padding: 12px 0;
     border-radius: 50%;
-    line-height: 13px;
+    font-size: 13px;
     line-height: 7px;
     text-align: center;
     color: #fafafa;
@@ -209,14 +239,15 @@ footer {
 }
 
 .social-links li a i:hover {
-    background: #b4380f;
+    background: #e84610;
 }
 
 #footer-details {
-    padding: 20px;
+    margin: 20px;
 }
 
-/*three reasons*/
+/*--------------------------------------------Three Reasons*/
+
 .three-reasons-icon {
     font-size: 26px;
     color: #e67e22;
@@ -226,7 +257,8 @@ footer {
     margin-bottom: 15px;
 }
 
-/*personal info*/
+/*--------------------------------------------Personal Info*/
+
 .personal-info-item {
     margin-bottom: 20px;
     display: block;
@@ -236,8 +268,6 @@ footer {
 .personal-info-item .key,
 .personal-info-item .value {
     padding-right: 8px;
-    display: inline-block;
-
 }
 
 .personal-info-item .key p,
@@ -246,6 +276,7 @@ footer {
 }
 
 .personal-info-item .key {
+    display: inline-block;
     width: 30%;
     margin-right: 21px;
     padding-top: 2px;
@@ -255,16 +286,18 @@ footer {
 .personal-info-item .key p {
     font-weight: 700;
 }
+
 .personal-info-item .value {
+    display: inline-block;
     position: relative;
     width: 60%;
 }
 
-/*skills*/
+/*--------------------------------------------Skills*/
+
 .progress {
     position: relative;
     height: 25px;
-    margin-bottom: 4px;
 }
 
 .progress-type {
@@ -276,15 +309,13 @@ footer {
     background-color: rgba(25, 25, 25, 0.2);
 }
 
+
 .progress-section {
     margin: 40px 20px;
 }
 
-/*work history*/
-.history-heading {
-    color: #fafafa;
-    margin-bottom: 50px;
-}
+
+/*--------------------------------------------Work History*/
 
 .timeline-item {
     padding: 4em 2em 0em 2em;
@@ -298,7 +329,7 @@ footer {
     margin: 0;
 }
 
-.timeline-item:before {
+.timeline-item::before {
     content: attr(data-dates);
     position: absolute;
     left: 2.5em;
@@ -306,12 +337,12 @@ footer {
     display: block;
     font-family: "Exo", sans-serif;
     font-weight: 500;
-    font-size: 0.8em;
+    font-size: .8em;
     padding: 0;
     margin: 0;
 }
 
-.timeline-item:after {
+.timeline-item::after {
     width: 12px;
     height: 12px;
     display: block;
@@ -323,17 +354,24 @@ footer {
     background: #fafafa;
 }
 
+.history-heading {
+    color: #fafafa;
+    margin-bottom: 50px;
+}
+
 .history-items {
     margin-bottom: 30px;
 }
 
-/*contact form*/
+/*--------------------------------------------Contact*/
+
 .contact-heading {
     font-family: "Exo", sans-serif;
     font-weight: 300;
     margin-top: 25px;
     margin-bottom: 20px;
 }
+
 
 .center-form {
     padding-top: 10px;
@@ -344,12 +382,24 @@ footer {
 button[type="submit"] {
     margin-top: 15px;
     margin-bottom: 20px;
+    background-color: #e84610;
     color: #fafafa;
-    background-color: #b4380f;
 }
 
-/*media query*/
-@media(min-width:992px) {
+/*--------------------------------------------Map*/
+div#map {
+    min-height: 360px;
+}
+
+/*--------------------------------------------Media Queries*/
+
+@media(min-width: 992px) {
+    .section-column {
+        padding: 0 30px 30px;
+        float: none;
+        display: table-cell;
+    }
+
     .center-form {
         padding-top: 30px;
         min-height: 240px;
